--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,3 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: make
+    - name: Upload binary
+      uses: actions/upload-artifact@v2
+      with:
+        name: hello-binary
+        path: ./hello
